--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
+body{
+    background-color: #222222;
+    color: #cecccc
+}
+
 .employeers {
     width: 100%;
+}
+
+button{
+    margin: 25px 25px 25px 0;
+}
+
+button:last-child{
+    margin-right: 0;
 }
