--- a/main.css
+++ b/main.css
@@ -11,13 +11,19 @@ modal label{
     width: 100%;
 }
 
-button{
-    margin: 25px 25px 25px 0;
+button.btn-action {
+	margin: 10px 25px 25px 0;
+	height: 50px;
+	width: 55px;
 }
 
-button:last-child{
-    margin-right: 0;
+button.btn-action:last-child {
+	margin-right: 0;
 } 
+
+button.btn-action i {
+	font-size: 20px
+}
 
 form{
 	color: #222222;
